--- a/css/aguapop/default.css
+++ b/css/aguapop/default.css
@@ -33,6 +33,35 @@ display:none;
 }
 }
 
+a {
+display: block;
+background: #BFBFBF;
+border: solid 10x #000;
+padding: 5px;
+color: #4D4D4D;
+border-radius:3px;
+margin-bottom: 2px;
+}
+
+a:hover {
+background: #7F7F7F;
+color: #1A1A1A;
+}
+
+a.ImageLink {
+display: inline;
+background: transparent;
+padding:0px;
+margin:0px;
+}
+
+a.toplink {
+display: inline;
+background: transparent;
+padding:0px;
+margin:0px;
+}
+
 div.error {
 background-color:#fddbdb;
 color:red;
@@ -80,7 +109,7 @@ border-radius: 3px;
 div.toplink {
 padding-top:1%;
 padding-right:1%;
-margin-bottom:-1.5%;
+margin-bottom:-2.5%;
 text-align:right
 }
 
@@ -116,7 +145,7 @@ float: left;
 font-weight: normal;
 margin-right:10px;
 text-align: left;
-width: 25%;
+width: 30%;
 color: gray;
 padding: 0px 20px;
 vertical-align: middle;
@@ -171,6 +200,12 @@ padding-left:30px;
 background: url("images/search.png") no-repeat 10px 4px #fff;
 }
 
+input[type="submit"] {
+padding-left:30px;
+background: url("images/tick.png") no-repeat 10px 4px #fff;
+cursor: pointer;
+}
+
 input:focus,textarea:focus {
 border: solid 1px gray;
 box-shadow: rgba(0, 0, 0, .75) 0 1px 4px;
@@ -187,7 +222,7 @@ font-size: 100%;
 }
 
 form.standard {
-width: 50%;
+width: 60%;
 padding: 20px;
 background: -webkit-gradient(linear, center top, center bottom, from(#F3F3F3), to(#E8E6E6));
 background-image: linear-gradient(to left top, #F3F3F3, #E8E6E6);
@@ -715,7 +750,7 @@ white-space: nowrap;
 /* Displays the dropdown on hover and moves back into position */
 .menu li:hover ul {
 background-image: linear-gradient(to left top, #0D0B58, #5962A0);
-border-radius: 0 6px 6px 6px;
+border-radius: 0 10px 10px 10px;
 box-shadow: inset 0px 2px 4px rgba(0,0,0,0.4);
 left: 5px;
 opacity: 0.9;
@@ -726,7 +761,7 @@ opacity: 0.9;
 background: -webkit-gradient(linear, center top, center bottom, from(#ccc), to(#ededed));
 background-image: linear-gradient(to left top, #0D0B58, #ededed);
 border-radius: 12px;
-box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.1);
+box-shadow:  0px 5px 5px rgba(0,0,0,0.1);
 color: #C5C4D3;
 }
 
@@ -740,3 +775,21 @@ box-shadow: none;
 border-radius: 12px;
 color: #fff;
 }
+
+div.container{
+width:100%;
+border:0em solid;
+}
+div.box{
+box-sizing:border-box;
+-moz-box-sizing:border-box; /* Firefox */
+width:50%;
+border:0px solid #4D4D4D;
+float:left;
+}
+
+img.product {
+border: 5px solid #fff;
+-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);}
